--- a/themes/Blonde/layouts/partials/header.html
+++ b/themes/Blonde/layouts/partials/header.html
@@ -41,12 +41,12 @@
     </div>
 </div>-->
 
-<div class="header min-h-64 bg-cover" style="background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%), url('/uploads/dither_it_zewlakk.png'); background-size: cover; background-position: center center;">
+<div class="header min-h-64 bg-cover" style="background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%), url('{{ .Site.BaseURL }}/uploads/dither_it_zewlakk.png'); background-size: cover; background-position: center center;">
     {{- partial "topbar.html" . -}}
     <div class="container md:h-52 mx-auto pl-5 pr-5 max-w-screen-xl flex flex-col md:flex-row justify-between">
         <div class="logo-wrapper h-full flex flex-col justify-center">
             <img class="mt-4 mb-4 h-28" style=""
-                                        alt="Logo Limity jsme My" src="/images/logo.svg"></div>
+                                        alt="Logo Limity jsme My" src="{{ .Site.BaseURL }}/images/logo.svg"></div>
         <div class="mt-4 mb-4 text-center md:text-left flex flex-col flex-wrap md:items-end items-center">
             <p class="ml-2 mr-2 max-w-sm text-white font-bold">Jsme hnutí usilující o ukončení těžby a spalování fosilních paliv. Naším cílem je klimatická spravedlnost.</p>
             <div class="mx-auto md:mx-0 flex flex-wrap justify-around mt-8 font-bold content-between">
