--- a/themes/Blonde/layouts/partials/components/card_featured.html
+++ b/themes/Blonde/layouts/partials/components/card_featured.html
@@ -6,20 +6,22 @@
 {{ end }}
 
 {{ with .context.Params.image }}
-    {{ $imageResource := (site.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" . ) }}
-    {{ $resized_regular := $imageResource.Fill "600x600" }}
-
-<div class="sm:rounded sm:overflow-hidden bg-cover bg-center h-auto text-white object-fill" style="background-image: url({{ $resized_regular.RelPermalink}})">
+  {{ $imageResource := (site.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" . ) }}
+  {{ $resized_regular := $imageResource.Fill "600x600" }}
+  <div class="sm:rounded sm:overflow-hidden bg-cover bg-center h-auto text-white object-fill"
+     style="background-image: url({{ $resized_regular.RelPermalink}})">
 {{ else }}
-<div class="sm:rounded sm:overflow-hidden bg-cover bg-center h-auto text-white object-fill">
+  <div class="sm:rounded sm:overflow-hidden bg-cover bg-center h-auto text-white object-fill">
 {{ end }}
 
-<div class="py-8 px-4 h-full w-full" style="background-color: rgb(0, 0, 0); opacity: 0.65;">
-       <div class="md:w-3/4">
-        <p class="text-3xl font-bold mb-5">{{.context.Title}}</p>
-        <p class="text-l leading-7 mb-10 font-semibold shadow" style="text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);">{{ substr .context.Summary 0 220 | plainify }}...</p>
-           <div class="w-full flex justify-end"><a href="{{ .context.Params.call_to_action_link}}"
-                                                   class="p-0.5 border-gray-100 border-b-4 hover:border-white hover:border-b-8 font-bold uppercase">{{ .context.Params.call_to_action_text}}</a></div>
-        </div>
-</div>
+  <div class="py-8 px-4 h-full w-full" style="background-color: rgb(0, 0, 0); opacity: 0.65;">
+    <div class="md:w-3/4">
+      <p class="text-3xl font-bold mb-5">{{.context.Title}}</p>
+      <p class="text-l leading-7 mb-10 font-semibold shadow"
+         style="text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);">{{ substr .context.Summary 0 220 | plainify }}...</p>
+      <div class="w-full flex justify-end"><a href="{{ .context.Params.call_to_action_link}}"
+                                              class="p-0.5 border-gray-100 border-b-4 hover:border-white hover:border-b-8 font-bold uppercase">{{ .context.Params.call_to_action_text}}</a>
+      </div>
+    </div>
+  </div>
 </div>
