--- a/themes/Blonde/layouts/partials/components/card_article_homepage.html
+++ b/themes/Blonde/layouts/partials/components/card_article_homepage.html
@@ -1,7 +1,7 @@
 <!-- component -->
 <div class="max-w-4xl px-10 my-4 py-6 bg-white rounded-md border-gray-100 shadow-sm">
     <div class="flex justify-between items-center">
-        <span class="font-light text-gray-600">mar 10, 2019</span>
+        <span class="font-light text-gray-600">{{.context.Date.Format "2.1. 2006"}}</span>
         <a class="px-2 py-1 bg-gray-600 text-gray-100 font-bold rounded hover:bg-gray-500" href="#">Akce</a>
     </div>
     <div class="mt-2">
