--- a/themes/Blonde/layouts/_default/index.html
+++ b/themes/Blonde/layouts/_default/index.html
@@ -7,8 +7,9 @@
     {{ .Render "summary" }}
     {{ end }}
   </div>
-  <div class="grid grid-cols-3 gap-4">
+  <div class="grid grid-cols-3 gap-8">
     <div class="col-span-3 lg:col-span-2 mb-3">
+      {{ partial "newsletter_signup_card" . }}
       {{if .IsHome}}
       {{.Scratch.Set "Paginator" (.Paginate (where .Site.RegularPages "Type" "in" site.Params.mainSections) (.Site.Params.paginator_pages) )}}
       {{else}}
@@ -23,49 +24,12 @@
       {{ partial "paginator.html" . }}
     </div>
     <div class="hidden lg:block lg:col-span-1">
-      <div class="panel mb-3">
-        <p class="text-xl bg-gray-300 rounded-t-lg text-gray-800 py-3 pl-3">Archives</p>
-        {{ if eq .Site.Params.archive_dropdown "false" }}
-        {{ range $name, $items := .Site.Taxonomies.archives }}
-        <a class="text-center block border py-2 px-4 bg-white hover:bg-gray-200 text-gray-800"
-           href="{{ $.Site.BaseURL }}/archives/{{ $name | urlize | lower }}">{{ $name }} ({{ .Count }})</a>
-        {{ end }}
-        {{ else }}
-        <select class="text-center block border py-2 px-4 bg-white hover:bg-gray-200 text-gray-800 w-full"
-                name="archive"
-                onChange="location.href=value;">
-          <option>Select Archive...</option>
-          {{ range $name, $items := .Site.Taxonomies.archives }}
-          <option value="{{ $.Site.BaseURL }}/archives/{{ $name | urlize | lower }}">{{ $name }} ({{ .Count }})
-          </option>
-          {{ end }}
-        </select>
-        {{ end }}
-      </div>
-
-      {{ if .Site.Taxonomies.categories }}
-      <div class="panel mb-3">
-        <p class="text-xl bg-gray-300 rounded-t-lg text-gray-800 py-3 pl-3">Categories</p>
-        {{ range $key, $value := .Site.Taxonomies.categories }}
-        <a class="text-center block border py-2 px-4 bg-white hover:bg-gray-200 text-gray-800"
-           href="{{ $.Site.BaseURL }}/categories/{{ $key | urlize  }}">{{ $key | humanize }}</a>
-
-        {{ end }}
-      </div>
+      <div class="text-2xl text-gray-700 font-bold hover:text-gray-600 pb-2">Nejbližší akce</div>
+      {{ $events := where .Site.RegularPages "Type" "in" "event" }} {{ $events := $events | intersect (where $events "Date" "ge" now).Reverse | first 5 }}
+      {{ range $events }}
+      {{ .Render "summary" }}
       {{ end }}
-      {{ if .Site.Taxonomies.tags }}
-      <div class="panel mb-3">
-        <p class="text-xl bg-gray-300 rounded-t-lg text-gray-800 py-3 pl-3">Tags</p>
-        <div class="panel-block bg-white border p-2">
-          {{- range $termName, $entries := .Site.Taxonomies.tags }}
-          <span
-                  class="inline-flex py-2 leading-4 mr-2 mb-2 content-center bg-gray-200 justify-center h-8 px-3 text-blue-500 hover:text-black"><a
-                  href="{{ "/tags/" | relLangURL }}{{ $termName | urlize }}">{{ $termName }}</a>
-        </span>
-          {{- end }}
-        </div>
-      </div>
-      {{ end }}
+      <a href="#" class="float-right uppercase text-gray-600 hover:text-gray-800 border-b-4 border-gray-600 hover:border-gray-800">Všechny akce</a>
     </div>
   </div>
 </div>
