--- a/themes/Blonde/layouts/partials/components/card_article_homepage.html
+++ b/themes/Blonde/layouts/partials/components/card_article_homepage.html
@@ -1,14 +1,18 @@
 <!-- component -->
-<div class="max-w-4xl px-10 my-4 py-6 bg-white rounded-md border-gray-100 shadow-sm">
+{{ $imageResource := (site.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" "tile.png" ) }}
+<div class="teaser-wrapper p-0.5 mb-8 rounded-md max-w-4xl mx-auto" style="background-image: url({{ $imageResource.RelPermalink}});">
+  <div class="px-10 py-6 bg-white border-gray-100 shadow-sm" style="transform: rotate(-0.2deg);">
     <div class="flex justify-between items-center">
-        <span class="font-light text-gray-600">{{.context.Date.Format "2.1. 2006"}}</span>
-        <a class="px-2 py-1 bg-gray-600 text-gray-100 font-bold rounded hover:bg-gray-500" href="#">Akce</a>
+      <span class="font-light text-gray-600">{{.context.Date.Format "2.1. 2006"}}</span>
+      <a class="px-2 py-1 bg-gray-300 text-gray-100 font-bold rounded hover:bg-gray-600" href="#">Akce</a>
     </div>
     <div class="mt-2">
-        <a class="text-2xl text-gray-700 font-bold hover:text-gray-600" href="#">{{ .context.Title }}</a>
-        <p class="mt-2 text-gray-600">{{ substr .context.Summary 0 240 | plainify }}...</p>
+      <a class="text-2xl text-gray-600 font-bold hover:text-gray-800 border-b-4 border-gray-600 hover:border-gray-600"
+         href="{{ .context.RelPermalink}}">{{ .context.Title }}</a>
+      <p class="mt-4 text-gray-600">{{ substr .context.Summary 0 240 | plainify }}...</p>
     </div>
     <div class="flex justify-end items-right mt-4">
-        <a class="text-blue-600 hover:underline" href="#">Přečíst si víc ></a>
+      <a class="text-gray-600 hover:text-gray-800 uppercase border-b-4 border-gray-600 hover:border-gray-800" href="#">Přečíst si víc</a>
     </div>
+  </div>
 </div>
