--- a/themes/Blonde/layouts/partials/paginator.html
+++ b/themes/Blonde/layouts/partials/paginator.html
@@ -4,27 +4,29 @@
     <ul class="pagination">
         <!-- Don't show on 1st and 2nd page -->
         {{ if and (ne $pag.PageNumber 1) (ne $pag.PageNumber 2) }}
-        <li class="page-item"><a href="{{ $pag.First.URL }}" rel="first" class="page-link text-blue-600 hover:bg-gray-400 hover:text-blue-700">First</a></li>
+        <li class="page-item p-0.5"><a href="{{ $pag.First.URL }}" rel="first" class="page-link text-gray-600 hover:text-gray-800">First</a></li>
         {{ end }}
 
         {{ if $pag.HasPrev  }}
-        <li class="page-item"><a href="{{ $pag.Prev.URL }}" rel="prev" class="page-link text-blue-600 hover:bg-gray-400 hover:text-blue-700">Prev</a></li>
+        <li class="page-item p-0.5"><a href="{{ $pag.Prev.URL }}" rel="prev" class="page-link text-blue-600 hover:bg-gray-400 hover:text-blue-700">Prev</a></li>
         {{ end }}
 
         {{ range $pag.Pagers }}
             {{ if eq . $pag }} <!-- Current Page -->
-            <li class="page-item active"><a href="{{ .URL }}" class="page-link bg-blue-600 border-blue-600 text-white hover:bg-blue-700 hover:border-blue-700">{{ .PageNumber }}</a></li>
+{{/*            <li class="page-item active"><a href="{{ .URL }}" class="page-link bg-blue-600 border-blue-600 text-white hover:bg-blue-700 hover:border-blue-700">{{ .PageNumber }}</a></li>*/}}
+      {{ $imageResource := (site.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" "tile.png" ) }}
+            <li class="page-item active p-0.5" style="background-image: url({{ $imageResource.RelPermalink}});"><a href="{{ .URL }}" class="page-link bg-white text-gray-900 font-bold">{{ .PageNumber }}</a></li>
             {{ else if and (ge .PageNumber (sub $pag.PageNumber 2)) (le .PageNumber (add $pag.PageNumber 2)) }}
             {{ $.Scratch.Set "dot_rendered" false }} <!-- Render prev 2 page and next 2 pages -->
-            <li class="page-item"><a href="{{ .URL }}" class="page-link text-blue-600 hover:bg-gray-400 hover:text-blue-700">{{ .PageNumber }}</a></li>
+            <li class="page-item p-0.5"><a href="{{ .URL }}" class="page-link text-gray-600">{{ .PageNumber }}</a></li>
             {{ else if eq ($.Scratch.Get "dot_rendered") false }} <!-- render skip pages -->
             {{ $.Scratch.Set "dot_rendered" true }}
-            <li class="page-item disabled"><a class="page-link">...</a></li>
+            <li class="page-item p-0.5 disabled"><a class="page-link">...</a></li>
             {{ end }}
         {{ end }}
 
         {{ if $pag.HasNext }}
-        <li class="page-item"><a href="{{ $pag.Next.URL }}" rel="next" class="page-link text-blue-600 hover:bg-gray-400 hover:text-blue-700">Next</a></li>
+        <li class="page-item p-0.5"><a href="{{ $pag.Next.URL }}" rel="next" class="page-link text-gray-600  hover:text-gray-900">Next</a></li>
         {{ end }}
 
         <!-- Don't show on last and 2nd last page -->
