--- a/themes/Blonde/layouts/partials/components/card_event.html
+++ b/themes/Blonde/layouts/partials/components/card_event.html
@@ -4,8 +4,8 @@
     <!--  <div class="w-full text-gray-500 font-thin">
         Livewire
       </div>-->
-    <div class="w-full text-gray-600 font-bold text-lg">
-      <a href="{{ .context.RelPermalink}}" class="hover:text-gray-800 transition duration-150 border-b-4 border-gray-600">
+    <div class="w-full text-ljm-green font-bold text-lg">
+      <a href="{{ .context.RelPermalink}}" class="hover:text-ljm-green-hover transition duration-150">
         {{ .context.Title }}
       </a>
     </div>
