--- a/themes/Blonde/layouts/_default/index.html
+++ b/themes/Blonde/layouts/_default/index.html
@@ -31,7 +31,7 @@
       {{ range $events }}
       {{ .Render "summary" }}
       {{ end }}
-      <a href="#" class="float-right uppercase text-gray-600 hover:text-gray-800 border-b-4 border-gray-600 hover:border-gray-800">Všechny akce</a>
+      <a href="#" class="readmore-link float-right uppercase text-gray-400 hover:text-gray-600 border-b-2 hover:border-b-4 border-ljm-green hover:border-ljm-green-hover">Všechny akce</a>
     </div>
   </div>
 </div>
