--- a/themes/Blonde/layouts/partials/components/card_event.html
+++ b/themes/Blonde/layouts/partials/components/card_event.html
@@ -1,4 +1,4 @@
-{{ $imageResource := (site.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" "tile.png" ) }}
+{{ $imageResource := ($.Sites.First.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" "tile.png" ) }}
 <div class="teaser-wrapper p-0.5 mb-4 rounded-md" style="background-image: url({{ $imageResource.RelPermalink}});">
   <div class="w-full bg-white p-6 flex flex-col">
     <!--  <div class="w-full text-gray-500 font-thin">
