--- a/themes/Blonde/layouts/partials/components/card_featured.html
+++ b/themes/Blonde/layouts/partials/components/card_featured.html
@@ -1,18 +1,17 @@
-{{ $img_url := newScratch }}
+{{ $bg_img := newScratch }}
 {{ if .context.Params.bgimage }}
-{{ $img_url.Set "url" .context.Params.bgimage}}
+{{ $bg_img.Set "url" .context.Params.bgimage}}
 {{ else }}
-{{ $img_url.Set "url"  "/img/default.png"}}
+{{ $bg_img.Set "url" $.context.Site.Params.featuredBackground }}
 {{ end }}
 
 <div class="featured-wrapper p-1 sm:rounded">
-{{ with .context.Params.bgimage }}
-  {{ $background_image := (site.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" . ) }}
-  {{ $resized_background_image := $background_image.Fill "600x600" }}
+{{ $bg_url := $bg_img.Get "url" }}
+{{ with $bg_url }}
+  {{ $background_image := ($.context.Sites.First.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" . ) }}
+{{ $resized_background_image := $background_image.Fill "600x600" }}
   <div class="sm:rounded sm:overflow-hidden bg-cover bg-center h-full text-white object-fill"
-     style="transform: rotate(-0.2deg); background-image: url({{ $resized_background_image.RelPermalink}})">
-{{ else }}
-  <div class="sm:rounded sm:overflow-hidden bg-cover bg-center h-full text-white object-fill" style="transform: rotate(-0.2deg);">
+     style="transform: rotate(-0.2deg); background-image: url({{ $resized_background_image.RelPermalink }})">
 {{ end }}
 
   <div class="py-8 px-4 h-full w-full" style="background-color: rgb(0, 0, 0); opacity: 0.65;">
