--- a/themes/Blonde/layouts/partials/paginator.html
+++ b/themes/Blonde/layouts/partials/paginator.html
@@ -14,7 +14,7 @@
         {{ range $pag.Pagers }}
             {{ if eq . $pag }} <!-- Current Page -->
 {{/*            <li class="page-item active"><a href="{{ .URL }}" class="page-link bg-blue-600 border-blue-600 text-white hover:bg-blue-700 hover:border-blue-700">{{ .PageNumber }}</a></li>*/}}
-      {{ $imageResource := (site.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" "tile.png" ) }}
+      {{ $imageResource := ($.Sites.First.GetPage "section" "uploads").Resources.GetMatch (strings.TrimPrefix "/uploads/" "tile.png" ) }}
             <li class="page-item active p-0.5" style="background-image: url({{ $imageResource.RelPermalink}});"><a href="{{ .URL }}" class="page-link bg-white text-gray-900 font-bold">{{ .PageNumber }}</a></li>
             {{ else if and (ge .PageNumber (sub $pag.PageNumber 2)) (le .PageNumber (add $pag.PageNumber 2)) }}
             {{ $.Scratch.Set "dot_rendered" false }} <!-- Render prev 2 page and next 2 pages -->
