--- a/themes/Blonde/layouts/partials/topbar.html
+++ b/themes/Blonde/layouts/partials/topbar.html
@@ -18,6 +18,6 @@
                       d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
             </svg>
         </div>
-        <div class="langswitcher">CZ | EN | DE</div>
+      {{ partial "language-switcher" . }}
     </div>
 </div>
