--- a/themes/Blonde/layouts/partials/header.html
+++ b/themes/Blonde/layouts/partials/header.html
@@ -8,10 +8,7 @@
         <div class="mt-4 mb-4 text-center md:text-left flex flex-col flex-wrap md:items-end items-center">
             <p class="ml-2 mr-2 max-w-sm text-white font-bold">Jsme hnutí usilující o ukončení těžby a spalování fosilních paliv. Naším cílem je klimatická spravedlnost.</p>
             <div class="mx-auto md:mx-0 flex flex-wrap justify-around mt-8 font-bold content-between">
-                <a class="text-xl text-gray-200 hover:text-white rounded-md px-4 py-2 m-2 transition duration-500 ease select-none bg-ljm-green hover:ring-4 hover:ring-ljm-orange hover:ring-opacity-20"
-                   href="#">Přidej se k nám</a>
-                <a class="text-xl bg-gray-500 text-gray-200 rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:text-white hover:ring-4 hover:ring-ljm-orange hover:ring-opacity-20"
-                   href="#">Chci vědět víc</a>
+              {{ partial "header_action_links.html" . }}
             </div>
         </div>
     </div>
