--- a/themes/Blonde/layouts/_default/single.html
+++ b/themes/Blonde/layouts/_default/single.html
@@ -2,7 +2,7 @@
 
 {{ define "main" }}
 <div class="grid grid-cols-3 gap-4">
-    <div class="col-span-3 lg:col-span-2 px-2">
+    <div class="col-span-3 lg:col-span-2 px-2 pl-9 prose prose-sm">
         <h1 class="title text-4xl">{{.Title}}</h1>
         <div class="content py-1">{{.Content}}</div>
     </div>
