--- a/themes/Blonde/layouts/partials/header_action_links.html
+++ b/themes/Blonde/layouts/partials/header_action_links.html
@@ -1,15 +1,15 @@
-{{ $headerMenuMap := (dict "en-us" "header_en" "cs-cz" "header_cs" "de-de" "header_de") }}
-{{ range $lang_code, $menu_name := $headerMenuMap }}
+{{ $headerLinksMap := (dict "en-us" "header_links_en" "cs-cz" "header_links_cs" "de-de" "header_links_de") }}
+{{ range $lang_code, $links_name := $headerLinksMap }}
 {{ if eq $.Site.Language.Params.LanguageCode $lang_code }}
-{{ $menu := index $.Site.Menus $menu_name }}
-{{ range $menu -}}
-{{ if eq .Identifier "primary"}}
+{{ $links := index $.Site.Data $links_name }}
+{{ range $links -}}
+{{ if eq .style "primary"}}
 <a class="btn-header text-gray-200 bg-ljm-green hover:ring-ljm-orange hover:ring-opacity-20"
-   href="{{ .URL }}">{{ .Name }}</a>
+   href="{{ .url | relLangURL }}">{{ .name }}</a>
 {{ end }}
-{{if eq .Identifier "secondary"}}
+{{if eq .style "secondary"}}
 <a class="btn-header bg-gray-500 text-gray-200 hover:ring-ljm-orange hover:ring-opacity-20"
-   href="{{ .URL }}">{{ .Name }}</a>
+   href="{{ .url | relLangURL }}">{{ .name }}</a>
 {{ end }}
 {{ end -}}
 {{ end }}
